--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,3 +1,29 @@
 @charset "utf-8";
 /* CSS Document */
 
+h1, h2, h3, h4, p, a, div {
+	font-family:Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";  
+}
+
+body {
+	background-color: lightgray;
+}
+
+div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #777;
+}
+
