--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -2,15 +2,18 @@
 /* CSS Document */
 
 .box {
-	background-color: honeydew; 
-	color: chocolate; 
-	width: 200px; 
-	height: 100px; 
-	margin: 20px; 
-	padding: 20px; 
+	background-color: white; 
+	color: black; 
+	width: 32%; 
+	height: auto;   
+	padding-top: 20px;
+	padding-bottom: 20px;
+	margin-top: 10px; 
+	margin-right:20px;
+	font-size: 1.5em; 
 	border-bottom: #E5E5E5 thick solid; 
 	border-right: #E5E5E5 thick solid; 
 	float: left;
-	
+	text-align: center; 
 }
 
