--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 h1, h2, h3, h4, p, a, div {
-	font-family:Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";  
+	font-family: Verdana, Geneva, Tahoma, sans-serif;   
 }
 
 body {
