--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -9,12 +9,26 @@ body {
 	background-color: #f4f4f2;
 }
 
+footer {
+	background-color: #353533; 
+	width:100%; 
+	height: 200px; 
+	text-align: center; 
+	color:white;
+	display: inline-block;
+	vertical-align: bottom;
+}
+
+footer p {
+	padding:40px;
+}
+
 li { 
 line-height: 1.5; 
 }
 
 div.scrollmenu {
-  background-color: #333;
+  background-color: #003333;
   overflow: auto;
   white-space: nowrap;
 }
@@ -23,12 +37,12 @@ div.scrollmenu a {
   display: inline-block;
   color: white;
   text-align: center;
-  padding: 14px;
+  padding: 20px;
   text-decoration: none;
 }
 
 div.scrollmenu a:hover {
-  background-color: #777;
+  background-color: #013b3b;
 }
 
 .container {
@@ -71,4 +85,18 @@ background-color: white;
 	border-right: #E5E5E5 thick solid; 
 	float: left;
 	text-align: center; 
+}
+
+.headercontainer {
+	margin: 0px; 
+	margin-right:20px; 
+	padding-top:20px; 
+	padding-bottom:20px; 
+	padding-left:20px; 
+	background-color:#015252; 
+	color:white;
+}
+
+hr {
+	border-top:1px solid #013b3b;
 }
