--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -77,6 +77,9 @@ background-color: white;
 	  margin-top: 20px; 
   }
 	
+.grid-container-8 .grid-item {
+	margin-right: 20px;
+}
 .box {
 	background-color: white; 
 	color: black; 
