--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-h1, h2, h3, h4, p, a, div {
+h1, h2, h3, h4, p, a, div, a h4 {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;   
 }
 
