--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,10 +1,18 @@
 @charset "utf-8";
 /* CSS Document */
 
+#clock {
+	float: right;
+	padding: 6px;
+	border: none;
+	margin-top: 8px;
+	margin-right: 16px;
+	font-size: 17px;
+}
+
 .box {
 	background-color: white; 
 	color: black; 
-	width: 32%; 
 	height: auto;   
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -13,6 +21,34 @@
 	font-size: 1.5em; 
 	border-bottom: #E5E5E5 thick solid; 
 	border-right: #E5E5E5 thick solid; 
-	float: left;
 	text-align: center; 
+}
+
+.grid-container {
+	display:grid;
+	grid-template-columns: (12, 1fr);
+	grid-gap:10px;
+	margin:auto; 	
+}
+
+.meny {
+	grid-column: span 12;
+}
+
+
+.kol12 {
+	grid-column:span 12; 
+}
+
+.kol4 {
+	grid-column:span 4; 
+}
+
+
+
+/*  */
+@media screen and (max-width: 600px) {
+	.kol1, .kol2, .kol4 {
+		grid-column:span 12; 
+	}
 }
