--- a/resources/css/learning.css
+++ b/resources/css/learning.css
@@ -1,3 +1,9 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    background-image:url("../resources/images/background.jpg");
+}
+
 .leftNavigation {
     width: 10%; 
     float:left; 
@@ -99,6 +105,53 @@
     content: "''";
 }
 
-#dog {
 
+.topnav {
+    background-color: #333; 
+    overflow: auto; 
+    white-space: nowrap;
+    padding: 20px;
+}
+
+.topnav a {
+    float: left; 
+    color: #f2f2f2; 
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    padding-right: 40px;
+    margin-top: 20px;
+}
+
+#logo {
+    height: 40px; 
+    float: left;
+}
+
+
+#dog {
+    height: 250px;
+}
+
+.grid-container {
+    display: grid; 
+    grid-template-columns: 2fr 6fr 2fr;
+}
+
+.grid-item {
+    padding:20px;
+}
+
+footer {
+	background-color: #353533; 
+	width:100%; 
+	height: 200px; 
+	text-align: center; 
+	color:white;
+	display: inline-block;
+	vertical-align: bottom;
+}
+
+footer p {
+	padding:40px;
 }
